loop detection between all of the pipelines.